<resources>
    <string name="app_name">ShopsListWithGeo</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add first item</string>
    <string name="enter_item">Shop name</string>
    <string name="hint_item">Shop name</string>
    <string name="quantity_item">Description</string>
    <string name="save_title">Save shop</string>
    <string name="title_activity_list">ShopList</string>
    <string name="alert">Are you sure?</string>
    <string name="no_text">No</string>
    <string name="yes_text">Yes</string>
    <string name="color_set_text">String 1</string>
    <string name="red_text">Red</string>
    <string name="green_text">Green</string>
    <string name="blue_text">Blue</string>
    <string name="range">Range</string>
    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="title_activity_shop_list_with_geo">ShopListActivityWithGeo</string>
    <string name="title_location_permission">Title location</string>
    <string name="text_location_permission">Text perm</string>
    <string name="ok">OK</string>
</resources>

