<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="23dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textAlert"
                android:text="@string/alert"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="5dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/noButton"
                android:background="@color/colorAccent"
                android:text="@string/no_text"
                android:layout_below="@id/textAlert"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/yesButton"
                android:layout_alignParentRight="true"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:layout_alignBottom="@id/noButton"
                android:text="@string/yes_text"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>